--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 .container {
-    background-color: rgb(23, 2, 31);
+    background-color: black;
     padding: 20px;
     width: 50%;
     align-items: center;
     justify-items: center;
-    background-image: url();
-    
+    border-radius: 20px;
+    display: flex;
 }
 body {
     display: flex;
@@ -17,11 +17,52 @@ body {
 }
 .text {
     color: rgb(160, 72, 135);
+    font-size: 50px;
 }
 .container h1 {
     color: rgb(139, 44, 148);
     text-align: center;
     
 }
+
+.col{
+    width: 100%;
+    text-align: center;
+        display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.col input {
+    padding: 5px;
+    text-align: center;
+    border-radius: 5px;
+
+
+
+}
+.col select {
+    text-align: center;
+    border-radius: 5px;
+    padding: 10px;
+    cursor: pointer;
+}
+.col button {
+    border-radius: 12px;
+    padding: 10px;
+    background: linear-gradient(to right, pink 0%, purple 50%, blue 100%);
+    color: white;
+    font-size: 10px;
+
+
+
+}
+.col button:hover {
+    background: linear-gradient(to right, rgb(236, 184, 193) 0%, rgb(206, 1, 206) 50%, rgb(70, 70, 255) 100%);
+    transition: all ease-in-out; 
+    cursor: pointer;
+
+}
+
 
 
